baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__01_lexer__type_alias_interaction.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Word "interaction"
Word "between"
Error "`"
Word "type"
Error "`"
Word "as"
Word "keyword"
LParen "("
Word "type"
Word "alias"
Word "decl"
RParen ")"
Word "and"
Error "`"
Word "type"
Error "`"
Word "as"
Word "meta-type"
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Word "whose"
Word "value"
Word "is"
Word "the"
Word "meta-type"
Word "type"
Word "MetaAlias"
Equals "="
Word "type"
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Word "whose"
Word "value"
Word "is"
Word "a"
Word "list"
Word "of"
Word "meta-types"
Word "type"
Word "MetaList"
Equals "="
Word "type"
LBracket "["
RBracket "]"
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Word "whose"
Word "value"
Word "is"
Word "a"
Word "union"
Word "including"
Word "the"
Word "meta-type"
Word "type"
Word "MetaUnion"
Equals "="
Word "type"
Pipe "|"
Word "string"
