baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__01_lexer__type_annotation.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "test_type_annotation"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "t"
Colon ":"
Word "type"
Equals "="
Word "baml"
Dot "."
Word "llm"
Dot "."
Word "get_return_type"
LParen "("
Word "function_name"
RParen ")"
Semicolon ";"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
