baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__01_lexer__type_as_identifier.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Error "`"
Word "type"
Error "`"
Word "used"
Word "as"
Word "an"
Word "identifier"
In "in"
Word "non-annotation"
Word "positions"
Slash "/"
Slash "/"
Word "Class"
Word "with"
Word "a"
Word "field"
Word "named"
Error "`"
Word "type"
Error "`"
LParen "("
Word "common"
In "in"
Word "real-world"
Word "BAML"
RParen ")"
Class "class"
Word "RiskFactor"
LBrace "{"
Word "type"
Word "string"
Word "severity"
Word "float"
RBrace "}"
Slash "/"
Slash "/"
Word "Class"
Word "with"
Word "field"
Word "named"
Error "`"
Word "type"
Error "`"
Word "whose"
Word "type"
Word "is"
Word "the"
Word "meta-type"
Error "`"
Word "type"
Error "`"
Class "class"
Word "MetaField"
LBrace "{"
Word "type"
Word "type"
RBrace "}"
Slash "/"
Slash "/"
Word "Enum"
Word "with"
Word "a"
Word "variant"
Word "named"
Error "`"
Word "type"
Error "`"
Enum "enum"
Word "Kind"
LBrace "{"
Word "type"
Word "other"
RBrace "}"
