baml_language/crates/baml_tests/snapshots/type_annotation/baml_tests__type_annotation__01_lexer__type_positions.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Error "`"
Word "type"
Error "`"
Word "as"
Word "a"
Word "type"
Word "annotation"
In "in"
Word "various"
Word "positions"
Slash "/"
Slash "/"
Word "In"
Word "a"
Let "let"
Word "binding"
Function "function"
Word "test_let_binding"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "t"
Colon ":"
Word "type"
Equals "="
Word "baml"
Dot "."
Word "llm"
Dot "."
Word "get_return_type"
LParen "("
Word "function_name"
RParen ")"
Semicolon ";"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "As"
Word "a"
Function "function"
Word "parameter"
Word "type"
Function "function"
Word "test_param"
LParen "("
Word "t"
Colon ":"
Word "type"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "As"
Word "a"
Function "function"
Return "return"
Word "type"
Function "function"
Word "test_return_type"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "type"
LBrace "{"
Return "return"
Word "baml"
Dot "."
Word "llm"
Dot "."
Word "get_return_type"
LParen "("
Word "function_name"
RParen ")"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Optional"
Word "type"
Function "function"
Word "test_optional"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "t"
Colon ":"
Word "type"
Question "?"
Equals "="
Word "null"
Semicolon ";"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "List"
Word "of"
Word "types"
Function "function"
Word "test_list"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "ts"
Colon ":"
Word "type"
LBracket "["
RBracket "]"
Equals "="
LBracket "["
RBracket "]"
Semicolon ";"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Union"
With "with"
Word "type"
Function "function"
Word "test_union"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "t"
Colon ":"
Word "type"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "hello"
Quote "\""
Semicolon ";"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Map"
Word "value"
Function "function"
Word "test_map"
LParen "("
Word "function_name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "m"
Colon ":"
Word "map"
Less "<"
Word "string"
Comma ","
Word "type"
Greater ">"
Equals "="
LBrace "{"
RBrace "}"
Semicolon ";"
Return "return"
Quote "\""
Word "ok"
Quote "\""
Semicolon ";"
RBrace "}"
